--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
     = csrf_meta_tags
   body
     = render 'shared/navbar'
+    = render 'shared/flashes'
     = yield
     = javascript_include_tag 'application'
     = yield(:after_js)
