--- a/app/views/static_pages/school.fr.html.slim
+++ b/app/views/static_pages/school.fr.html.slim
@@ -7,7 +7,8 @@ p L’école de snowboard A Vos Snows est une école 100% snowboard qui enseigne
 h2 La Monitrice – Adèle
 ul
   li Titulaire de la carte professionnelle d’éducateur sportif snowboard (Diplôme Français)
-  li Titulaire du Brevet Professionnel de Professeur des Sports de Neiges – Snowboard & Ski (Diplôme Suisse)
+  li Titulaire du Brevet Professionnel de Professeur des Sports de Neiges – Snowboard & Ski
+     (Diplôme Suisse)
   li Formation Universitaire en Management des Evénements et Loisirs Sportifs en France
   li Formation de Professeur des Sports de Neiges (Snowboard & Ski) en Suisse
   li 2006-2012 Monitrice snowboard & ski à Champoussin-Les Crosets, Suisse
@@ -15,10 +16,13 @@ ul
   li 2014 Monitrice snowboard chez Cardrona Alpine Resort à Wanaka, Nouvelle-Zélande
 
 h2 Sa Philosophie d’Enseignement du Snowboard
-h3 Le snowboard est un sport à part entière qui mérite d’être enseigné par des moniteurs dont c’est la formation principale.
+h3 Le snowboard est un sport à part entière qui mérite d’être enseigné par des moniteurs dont
+  c’est la formation principale.
 
 p Passionnée par l’enseignement et forte de son expérience, elle pense que :
 ul
-  li Chacun est libre de choisir dès son plus jeune âge le sport qui lui correspond le plus : ski ou snowboard
+  li Chacun est libre de choisir dès son plus jeune âge le sport qui lui correspond le plus :
+    ski ou snowboard
   li Il n’y a pas un sport mieux qu’un autre d’un point de vue médical
-  li Tout le monde peut apprendre, quel que soit son âge et son histoire si le moniteur respecte son rythme.
+  li Tout le monde peut apprendre, quel que soit son âge et son histoire si le moniteur
+    respecte son rythme.
