--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,7 +1,12 @@
 .navbar.navbar-default
   .container-fluid
     .navbar-header
-      button.navbar-toggle.collapsed type='button' data-toggle='collapse' data-target='#navbar-collapse' aria-expanded='false'
+      button.navbar-toggle.collapsed {
+          type='button'
+          data-toggle='collapse'
+          data-target='#navbar-collapse'
+          aria-expanded='false'
+        }
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
