--- a/app/views/static_pages/faq.fr.html.slim
+++ b/app/views/static_pages/faq.fr.html.slim
@@ -23,33 +23,40 @@ p Adèle : cela dépend de votre moniteur et de sa technique d’enseignement. S
 
 h2 Peut-on apprendre le snowboard à tout âge ?
 p Adèle : Il est possible d’apprendre dès que vous vous sentez prêt. Pour les plus petits, il faut
-  savoir marcher et avoir envie d’essayer. Pour les adultes, il n’y a pas d’âge limite pour commencer
-  mais il faut se connaître et tenir compte de ses capacités physiques. J’ai vu des personnes de plus
-  de 70 ans pratiquer le snowboard.
+  savoir marcher et avoir envie d’essayer. Pour les adultes, il n’y a pas d’âge limite pour
+  commencer mais il faut se connaître et tenir compte de ses capacités physiques. J’ai vu des
+  personnes de plus de 70 ans pratiquer le snowboard.
 
 h2 Y-a-t-il un âge limite pour essayer le freestyle?
-p Adèle : Non, il faut seulement suivre une progression adaptée à votre niveau et à vos capacités physiques.
+p Adèle : Non, il faut seulement suivre une progression adaptée à votre niveau et à vos capacités
+  physiques.
 
 h2 Le port de casque du casque est-il obligatoire ?
-p Adèle : Le port du casque n’est pas obligatoire mais est plus que fortement conseillé. Je porte un casque
-  à chaque fois que je fais du snowboard, que ce soit pour moi ou en enseignant même aux plus petits.
+p Adèle : Le port du casque n’est pas obligatoire mais est plus que fortement conseillé. Je porte
+  un casque à chaque fois que je fais du snowboard, que ce soit pour moi ou en enseignant même aux
+  plus petits.
 
 h2 Peut-on commencer à apprendre le snowboard avant 8 ans ?
-p Adèle : On peut commencer à apprendre le snowboard à partir de 2 ans. Ce n’est pas réellement une question
-  d’âge mais plutôt de pointure, de taille et il faut surtout que l’enfant manifeste l’envie de faire du snowboard.
+p Adèle : On peut commencer à apprendre le snowboard à partir de 2 ans. Ce n’est pas réellement une
+  question d’âge mais plutôt de pointure, de taille et il faut surtout que l’enfant manifeste
+  l’envie de faire du snowboard.
 
 h2 Faut-il séjourner à la Mongie pour prendre des cours avec Adèle ?
-p Adèle : Vous n’avez pas besoin de séjourner à La Mongie, il faut juste venir sur le domaine du Grand Tourmalet,
-  que ce soit à Barèges ou La Mongie. Nous conviendrons du point de rendez-vous ensemble où nous retrouver pour le cours.
+p Adèle : Vous n’avez pas besoin de séjourner à La Mongie, il faut juste venir sur le domaine du
+  Grand Tourmalet, que ce soit à Barèges ou La Mongie. Nous conviendrons du point de rendez-vous
+  ensemble où nous retrouver pour le cours.
 
-h2 Peut-on réserver des cours de snowboard chez A Vos Snows à l’office de tourisme du Grand Tourmalet ? de La Mongie ? Barèges ?
-p Adèle : Les offices du tourisme du Grand Tourmalet sont partenaires d’A Vos Snows. Ils sauront vous renseigner
-  sur mon offre et vous orienterons sur les modalités de réservations des cours : par téléphone, par mail ou sur
+h2 Peut-on réserver des cours de snowboard chez A Vos Snows à l’office de tourisme du Grand
+  Tourmalet ? de La Mongie ? Barèges ?
+p Adèle : Les offices du tourisme du Grand Tourmalet sont partenaires d’A Vos Snows. Ils sauront
+  vous renseigner sur mon offre et vous orienterons sur les modalités de réservations des cours :
+  par téléphone, par mail ou sur
   a href='http://www.avossnows.com' target='_blank'  avossnows.com
 
 h2 Le prix du cours inclut-il la location de matériel de snowboard ?
-p Adèle : le prix du cours n’inclut pas la location du matériel excepté pour les cours baby-rider pour lesquels
-  le snowboard et les boots sont inclus. Cependant, je vous conseille de louer un casque.
+p Adèle : le prix du cours n’inclut pas la location du matériel excepté pour les cours baby-rider
+  pour lesquels le snowboard et les boots sont inclus. Cependant, je vous conseille de louer un
+  casque.
 
 h2 Le tarif du cours inclut-il l’achat du forfait de remontées mécaniques ?
 p Adèle : le tarif du cours n’inclut pas le forfait de remontées mécaniques.
